k8s/nginx_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  annotations:
    kapicorp.com/tesoro: kapitan-reveal-refs
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      serviceAccountName: tesoro-admission-controller-sa
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
