k8s/nginx_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  annotations:
    kapicorp.com/tesoro: kapitan-reveal-refs
spec:
    serviceAccountName: tesoro-admission-controller-sa
    containers:
    - name: nginx
      image: nginx:1.14.2
      ports:
      - containerPort: 80
