k8s/tesoro_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tesoro-admission-controller
  namespace: tesoro
spec:
  selector:
    app: tesoro-admission-controller
  ports:
    - port: 443
      targetPort: tesoro-api
