k8s/tesoro_controller.yaml
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: tesoro-admission-controller
webhooks:
  - name: tesoro-admission-controller.tesoro.svc
    failurePolicy: Fail
    clientConfig:
      service:
        name: tesoro-admission-controller
        namespace: tesoro
        path: "/mutate"
      caBundle: |
        LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZQakNDQXlhZ0F3SUJBZ0lKQUxQdlV2a0Ns
[...]
    rules:
      - operations:
          - CREATE
          - UPDATE
        apiGroups:
          - ""
        resources:
          - "*"
        apiVersions:
          - "*"
      - operations:
          - CREATE
          - UPDATE
        apiGroups:
          - "apps"
        resources:
          - "deployments"
        apiVersions:
          - "*"
